recursion.lessons.recursion.koch.SquareKoch.scala.error
SquareKoch:34: error: expected start of definition
	override def run() {
                 ^SquareKoch:37: error: Unmatched closing brace '}' ignored here
}
^